--- a/styles/style.css
+++ b/styles/style.css
@@ -114,9 +114,38 @@ main{
 }
 .code{
   display: flex;
-  justify-content:last baseline;
+margin: ;
 }
 .codeing{
+  max-width: 850px;
+  padding: 48px;
+}
+
+
+
+
+
+.i-will-2{
+  font-weight: bold;
+  font-size: 24px;
+}
+.codeing-2{
+  font-size: 16px;
+  font-weight: 300;
+}
+.learn-more{
+  font-size: 20;
+  font-weight: 600;
+  padding:10px;
+}
+.layer-2{
+  width: 274px;
+  height: 240px;
+}
+.code-2{
+display: flex;
+}
+.codeing-d-2{
   max-width: 850px;
   padding: 48px;
 }
